@@ -10,8 +10,10 @@ buildNumber.properties
 .classpath
 *.project
 .settings
+.idea
 *.tmp
 doc/benchmark-2017-01/Diagrams.aux
 doc/benchmark-2017-01/Diagrams.log
 doc/benchmark-2017-01/Diagrams.blg
 doc/benchmark-2017-01/Diagrams.bbl
+*.iml
